# tagger

./: Cargo.toml  LICENSE  README.md  project_info.toml
src/: main.rs  project_info.rs
src/project_info/: music.rs  programming.rs
tests/: music_tests.rs  programming_tests.rs  project_info_tests.rs
